# cat-rabbit-doodle-classifier-API

./: README.md  main.py  pyproject.toml
model/: model.npy
